test-ingress-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: static-web-service
  namespace: ingress-nginx
spec: 
  ports: 
    - port: 80
  selector: 
    app: days-app
